Updated css of Solutions and About page. Added parts to history segement, formatted and added animations. Need to fix map/pins spacing issue

--- a/app/assets/stylesheets/about.scss
+++ b/app/assets/stylesheets/about.scss
@@ -53,16 +53,20 @@ $zoomAmount: 1.1;
 	width: 100%;
 	padding: 20px;
 	background-size: cover;
-	background-color: #f7f7f7; 
+	background: linear-gradient(to right, rgba(66, 134, 244, 0.1), rgba(66, 134, 244, 0.05), rgba(66, 134, 244, 0.1));
+	color: #3B6584;
 }
 
-#about-mission h3 {
+#about-mission h2 {
 	text-align: center; 
 	margin: 10px;
 }
 
 .mission-container {
 	margin: 40px;
+	p {
+		text-align: justify;
+	}
 }
 
 // ===============================
@@ -70,23 +74,48 @@ $zoomAmount: 1.1;
 // ===============================
 
 #about-history {
-	display: table;
 	width: 100%;
-	padding: 20px;
-	background-size: cover;
-	background-color: orange; 
+	padding: 0;
+	margin: 0;
 }
 
-#about-history h3 {
-	text-align: center; 
-	margin-bottom: 30px;
-}
-
-.history-container {
-	margin: 40px;
-}
-
-#about-history .history-flag {
+#about-history h2 {
 	text-align: center;
+	margin: 50px 10px 10px 10px;
 }
 
+#about-history .history-timeline {
+	background-size: cover;
+	width: 100%;
+}
+
+.history-timeline .founded {
+	width: 100;
+	padding: 6%;
+}
+
+.history-timeline .moved {
+	width: 100;
+	padding: 6%;
+	background-color: pink;
+}
+.history-timeline .expansion {
+	width: 100;
+	padding: 6%;
+}
+
+.history-timeline .pin-1 {
+	animation-delay: 0.3s;
+}
+
+.history-timeline .pin-2 {
+	animation-delay: 0.4s;
+}
+
+.history-timeline .pin-3 {
+	animation-delay: 0.5s;
+}
+
+.history-timeline .fa-map {
+	// border: 2px solid red;
+}
