--- a/app/assets/stylesheets/solutions.scss
+++ b/app/assets/stylesheets/solutions.scss
@@ -50,28 +50,27 @@ $zoomAmount: 1.1;
 #solutions-all {
   display: table;
   width: 100%;
-  overflow: hidden;
+  padding: 20px;
   background-size: cover;
+  background: linear-gradient(to right,rgba(66, 134, 244, 0.1), rgba(66, 134, 244, 0.05), rgba(66, 134, 244, 0.1));
   color: #3B6584;
 }
 
 #solutions-all h2 {
   text-align: center;
-  margin: 20px;
-  // font-weight: lighter;
-  font-size: 3em;
+  margin: 10px;
 }
 
 #solutions-all .solutions-intro p {
-  font-size: 1.2em;
   text-align: justify;
 }
 
 #solutions-all .container {
   display: table-cell;
-  margin: 20px;
+  margin: 40px;
   padding: 0 5% 0 5%;
-  background: linear-gradient(to right,rgba(66, 134, 244, 0.2), rgba(66, 134, 244,0.1), rgba(66, 134, 244,0.2));
+  width: 100%;
+  
 }
 
 #solutions-all .solution-card-area {
